Compilers/New_Set/Assignment_4/y.output
Terminals unused in grammar

   SINGLE_COMMENT
   MULTI_COMMENT
   STRUCT_KEYWORD
   UNION_KEYWORD


State 326 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOAT_CONSTANT
    4                   | CHAR_CONSTANT
    5                   | ENUMERATION
    6                   | STRING_LITERAL
    7                   | '(' expression ')'

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '(' argument_expression_list ')'
   12                   | postfix_expression '.' IDENTIFIER
   13                   | postfix_expression VAL_AT IDENTIFIER
   14                   | postfix_expression PLUS_PLUS
   15                   | postfix_expression MINUS_MINUS
   16                   | '(' type_name ')' '{' initializer_list '}'
   17                   | '(' type_name ')' '{' initializer_list ',' '}'

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list ',' assignment_expression

   20 unary_expression: postfix_expression
   21                 | PLUS_PLUS unary_expression
   22                 | MINUS_MINUS unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF_KEYWORD unary_expression
   25                 | SIZEOF_KEYWORD '(' type_name ')'

   26 unary_operator: '&'
   27               | '*'
   28               | '+'
   29               | '-'
   30               | '~'
   31               | '!'

   32 cast_expression: unary_expression
   33                | '(' type_name ')' cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression '*' cast_expression
   36                          | multiplicative_expression '/' cast_expression
   37                          | multiplicative_expression '%' cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression '+' multiplicative_expression
   40                    | additive_expression '-' multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_SHIFT additive_expression
   43                 | shift_expression RIGHT_SHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression '<' shift_expression
   46                      | relational_expression '>' shift_expression
   47                      | relational_expression LESS_EQUAL shift_expression
   48                      | relational_expression GREATER_EQUAL shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQUAL_EQUAL relational_expression
   51                    | equality_expression NOT_EQUAL relational_expression

   52 and_expression: equality_expression
   53               | and_expression '&' equality_expression

   54 exclusive_or_expression: and_expression
   55                        | exclusive_or_expression '^' and_expression

   56 inclusive_or_expression: exclusive_or_expression
   57                        | inclusive_or_expression '|' exclusive_or_expression

   58 logical_and_expression: inclusive_or_expression
   59                       | logical_and_expression LOGICAL_AND inclusive_or_expression

   60 logical_or_expression: logical_and_expression
   61                      | logical_or_expression LOGICAL_OR logical_and_expression

   62 conditional_expression: logical_or_expression
   63                       | logical_or_expression '?' expression ':' conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 expression: assignment_expression
   67           | expression ',' assignment_expression

   68 constant_expression: conditional_expression

   69 declaration: declaration_specifiers ';'
   70            | declaration_specifiers init_declarator_list ';'

   71 declaration_specifiers: storage_class_specifier
   72                       | storage_class_specifier declaration_specifiers
   73                       | type_specifier
   74                       | type_specifier declaration_specifiers
   75                       | type_qualifier
   76                       | type_qualifier declaration_specifiers
   77                       | function_specifier
   78                       | function_specifier declaration_specifiers

   79 init_declarator_list: init_declarator
   80                     | init_declarator_list ',' init_declarator

   81 init_declarator: declarator
   82                | declarator '=' initializer

   83 storage_class_specifier: TYPEDEF_KEYWORD
   84                        | EXTERN_KEYWORD
   85                        | STATIC_KEYWORD
   86                        | AUTO_KEYWORD
   87                        | REGISTER_KEYWORD

   88 type_specifier: SIGNED_KEYWORD
   89               | UNSIGNED_KEYWORD
   90               | BOOL_KEYWORD
   91               | COMPLEX_KEYWORD
   92               | IMAGINARY_KEYWORD
   93               | enum_specifier
   94               | VOID_KEYWORD
   95               | CHAR_KEYWORD
   96               | SHORT_KEYWORD
   97               | INT_KEYWORD
   98               | LONG_KEYWORD
   99               | FLOAT_KEYWORD
  100               | DOUBLE_KEYWORD

  101 specifier_qualifier_list: type_specifier
  102                         | type_specifier specifier_qualifier_list
  103                         | type_qualifier
  104                         | type_qualifier specifier_qualifier_list

  105 assignment_operator: '='
  106                    | STAR_EQUAL
  107                    | BY_EQUAL
  108                    | PERCENT_EQUAL
  109                    | PLUS_EQUAL
  110                    | MINUS_EQUAL
  111                    | LEFT_SHIFT_EQUAL
  112                    | RIGHT_SHIFT_EQUAL
  113                    | AND_EQUAL
  114                    | BITWISENOT_EQUAL
  115                    | OR_EQUAL

  116 enum_specifier: ENUM_KEYWORD '{' enumerator_list '}'
  117               | ENUM_KEYWORD IDENTIFIER '{' enumerator_list '}'
  118               | ENUM_KEYWORD IDENTIFIER

  119 enumerator_list: enumerator
  120                | enumerator_list ',' enumerator

  121 enumerator: IDENTIFIER
  122           | IDENTIFIER '=' constant_expression

  123 type_qualifier: CONST_KEYWORD
  124               | RESTRICT_KEYWORD
  125               | VOLATILE_KEYWORD

  126 function_specifier: INLINE_KEYWORD

  127 declarator: direct_declarator
  128           | pointer direct_declarator

  129 direct_declarator: IDENTIFIER
  130                  | '(' declarator ')'
  131                  | direct_declarator '[' type_qualifier_list '*' ']'
  132                  | direct_declarator '(' parameter_type_list ')'
  133                  | direct_declarator '(' ')'
  134                  | direct_declarator '(' identifier_list ')'
  135                  | direct_declarator '[' ']'
  136                  | direct_declarator '[' '*' ']'
  137                  | direct_declarator '[' type_qualifier_list ']'
  138                  | direct_declarator '[' assignment_expression ']'
  139                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  140                  | direct_declarator '[' STATIC_KEYWORD assignment_expression ']'
  141                  | direct_declarator '[' STATIC_KEYWORD type_qualifier_list assignment_expression ']'
  142                  | direct_declarator '[' type_qualifier_list STATIC_KEYWORD assignment_expression ']'

  143 pointer: '*'
  144        | '*' type_qualifier_list
  145        | '*' pointer
  146        | '*' type_qualifier_list pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list ',' ELLIPSES

  151 parameter_list: parameter_declaration
  152               | parameter_list ',' parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list ',' IDENTIFIER

  157 type_name: specifier_qualifier_list

  158 initializer: assignment_expression
  159            | '{' initializer_list '}'
  160            | '{' initializer_list ',' '}'

  161 initializer_list: initializer
  162                 | designation initializer
  163                 | initializer_list ',' initializer
  164                 | initializer_list ',' designation initializer

  165 designation: designator_list '='

  166 designator_list: designator
  167                | designator_list designator

  168 designator: '[' constant_expression ']'
  169           | '.' IDENTIFIER

  170 translation_unit: external_declaration
  171                 | translation_unit external_declaration

  172 external_declaration: function_definition
  173                     | declaration

  174 function_definition: declaration_specifiers declarator compound_statement
  175                    | declaration_specifiers declarator declaration_list compound_statement

  176 declaration_list: declaration
  177                 | declaration_list declaration

  178 statement: labeled_statement
  179          | compound_statement
  180          | expression_statement
  181          | selection_statement
  182          | iteration_statement
  183          | jump_statement

  184 labeled_statement: IDENTIFIER ':' statement
  185                  | CASE_KEYWORD constant_expression ':' statement
  186                  | DEFAULT_KEYWORD ':' statement

  187 compound_statement: '{' '}'
  188                   | '{' block_item_list '}'

  189 block_item_list: block_item
  190                | block_item_list block_item

  191 block_item: declaration
  192           | statement

  193 expression_statement: ';'
  194                     | expression ';'

  195 selection_statement: IF_KEYWORD '(' expression ')' statement
  196                    | IF_KEYWORD '(' expression ')' statement ELSE_KEYWORD statement
  197                    | SWITCH_KEYWORD '(' expression ')' statement

  198 iteration_statement: WHILE_KEYWORD '(' expression ')' statement
  199                    | DO_KEYWORD statement WHILE_KEYWORD '(' expression ')' ';'
  200                    | FOR_KEYWORD '(' expression_statement expression_statement expression ')' statement
  201                    | FOR_KEYWORD '(' declaration expression_statement expression ')' statement

  202 jump_statement: GOTO_KEYWORD IDENTIFIER ';'
  203               | CONTINUE_KEYWORD ';'
  204               | BREAK_KEYWORD ';'
  205               | RETURN_KEYWORD ';'
  206               | RETURN_KEYWORD expression ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 31
'%' (37) 37
'&' (38) 26 53
'(' (40) 7 10 11 16 17 25 33 130 132 133 134 195 196 197 198 199 200
    201
')' (41) 7 10 11 16 17 25 33 130 132 133 134 195 196 197 198 199 200
    201
'*' (42) 27 35 131 136 143 144 145 146
'+' (43) 28 39
',' (44) 17 19 67 80 120 150 152 156 160 163 164
'-' (45) 29 40
'.' (46) 12 169
'/' (47) 36
':' (58) 63 184 185 186
';' (59) 69 70 193 194 199 202 203 204 205 206
'<' (60) 45
'=' (61) 82 105 122 165
'>' (62) 46
'?' (63) 63
'[' (91) 9 131 135 136 137 138 139 140 141 142 168
']' (93) 9 131 135 136 137 138 139 140 141 142 168
'^' (94) 55
'{' (123) 16 17 116 117 159 160 187 188
'|' (124) 57
'}' (125) 16 17 116 117 159 160 187 188
'~' (126) 30
error (256)
SINGLE_COMMENT (258)
MULTI_COMMENT (259)
AUTO_KEYWORD (260) 86
ENUM_KEYWORD (261) 116 117 118
RESTRICT_KEYWORD (262) 124
CASE_KEYWORD (263) 185
DOUBLE_KEYWORD (264) 100
FLOAT_KEYWORD (265) 99
LONG_KEYWORD (266) 98
INT_KEYWORD (267) 97
SHORT_KEYWORD (268) 96
CHAR_KEYWORD (269) 95
VOID_KEYWORD (270) 94
SIGNED_KEYWORD (271) 88
VOLATILE_KEYWORD (272) 125
CONST_KEYWORD (273) 123
GOTO_KEYWORD (274) 202
SIZEOF_KEYWORD (275) 24 25
BOOL_KEYWORD (276) 90
CONTINUE_KEYWORD (277) 203
UNSIGNED_KEYWORD (278) 89
BREAK_KEYWORD (279) 204
EXTERN_KEYWORD (280) 84
RETURN_KEYWORD (281) 205 206
STATIC_KEYWORD (282) 85 140 141 142
COMPLEX_KEYWORD (283) 91
DEFAULT_KEYWORD (284) 186
INLINE_KEYWORD (285) 126
STRUCT_KEYWORD (286)
IMAGINARY_KEYWORD (287) 92
SWITCH_KEYWORD (288) 197
TYPEDEF_KEYWORD (289) 83
REGISTER_KEYWORD (290) 87
UNION_KEYWORD (291)
DO_KEYWORD (292) 199
WHILE_KEYWORD (293) 198 199
IF_KEYWORD (294) 195 196
ELSE_KEYWORD (295) 196
FOR_KEYWORD (296) 200 201
VAL_AT (297) 13
PLUS_PLUS (298) 14 21
MINUS_MINUS (299) 15 22
LEFT_SHIFT (300) 42
RIGHT_SHIFT (301) 43
LESS_EQUAL (302) 47
GREATER_EQUAL (303) 48
EQUAL_EQUAL (304) 50
NOT_EQUAL (305) 51
LOGICAL_AND (306) 59
LOGICAL_OR (307) 61
PERCENT_EQUAL (308) 108
PLUS_EQUAL (309) 109
MINUS_EQUAL (310) 110
LEFT_SHIFT_EQUAL (311) 111
ELLIPSES (312) 150
STAR_EQUAL (313) 106
BY_EQUAL (314) 107
RIGHT_SHIFT_EQUAL (315) 112
AND_EQUAL (316) 113
BITWISENOT_EQUAL (317) 114
OR_EQUAL (318) 115
IDENTIFIER (319) 1 12 13 117 118 121 122 129 155 156 169 184 202
INTEGER_CONSTANT (320) 2
FLOAT_CONSTANT (321) 3
ENUMERATION (322) 5
CHAR_CONSTANT (323) 4
STRING_LITERAL (324) 6


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
primary_expression (95)
    on left: 1 2 3 4 5 6 7, on right: 8
postfix_expression (96)
    on left: 8 9 10 11 12 13 14 15 16 17, on right: 9 10 11 12 13 14
    15 20
argument_expression_list (97)
    on left: 18 19, on right: 11 19
unary_expression (98)
    on left: 20 21 22 23 24 25, on right: 21 22 24 32 65
unary_operator (99)
    on left: 26 27 28 29 30 31, on right: 23
cast_expression (100)
    on left: 32 33, on right: 23 33 34 35 36 37
multiplicative_expression (101)
    on left: 34 35 36 37, on right: 35 36 37 38 39 40
additive_expression (102)
    on left: 38 39 40, on right: 39 40 41 42 43
shift_expression (103)
    on left: 41 42 43, on right: 42 43 44 45 46 47 48
relational_expression (104)
    on left: 44 45 46 47 48, on right: 45 46 47 48 49 50 51
equality_expression (105)
    on left: 49 50 51, on right: 50 51 52 53
and_expression (106)
    on left: 52 53, on right: 53 54 55
exclusive_or_expression (107)
    on left: 54 55, on right: 55 56 57
inclusive_or_expression (108)
    on left: 56 57, on right: 57 58 59
logical_and_expression (109)
    on left: 58 59, on right: 59 60 61
logical_or_expression (110)
    on left: 60 61, on right: 61 62 63
conditional_expression (111)
    on left: 62 63, on right: 63 64 68
assignment_expression (112)
    on left: 64 65, on right: 18 19 65 66 67 138 139 140 141 142 158
expression (113)
    on left: 66 67, on right: 7 9 63 67 194 195 196 197 198 199 200
    201 206
constant_expression (114)
    on left: 68, on right: 122 168 185
declaration (115)
    on left: 69 70, on right: 173 176 177 191 201
declaration_specifiers (116)
    on left: 71 72 73 74 75 76 77 78, on right: 69 70 72 74 76 78 153
    154 174 175
init_declarator_list (117)
    on left: 79 80, on right: 70 80
init_declarator (118)
    on left: 81 82, on right: 79 80
storage_class_specifier (119)
    on left: 83 84 85 86 87, on right: 71 72
type_specifier (120)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100, on right: 73
    74 101 102
specifier_qualifier_list (121)
    on left: 101 102 103 104, on right: 102 104 157
assignment_operator (122)
    on left: 105 106 107 108 109 110 111 112 113 114 115, on right:
    65
enum_specifier (123)
    on left: 116 117 118, on right: 93
enumerator_list (124)
    on left: 119 120, on right: 116 117 120
enumerator (125)
    on left: 121 122, on right: 119 120
type_qualifier (126)
    on left: 123 124 125, on right: 75 76 103 104 147 148
function_specifier (127)
    on left: 126, on right: 77 78
declarator (128)
    on left: 127 128, on right: 81 82 130 153 174 175
direct_declarator (129)
    on left: 129 130 131 132 133 134 135 136 137 138 139 140 141 142,
    on right: 127 128 131 132 133 134 135 136 137 138 139 140 141 142
pointer (130)
    on left: 143 144 145 146, on right: 128 145 146
type_qualifier_list (131)
    on left: 147 148, on right: 131 137 139 141 142 144 146 148
parameter_type_list (132)
    on left: 149 150, on right: 132
parameter_list (133)
    on left: 151 152, on right: 149 150 152
parameter_declaration (134)
    on left: 153 154, on right: 151 152
identifier_list (135)
    on left: 155 156, on right: 134 156
type_name (136)
    on left: 157, on right: 16 17 25 33
initializer (137)
    on left: 158 159 160, on right: 82 161 162 163 164
initializer_list (138)
    on left: 161 162 163 164, on right: 16 17 159 160 163 164
designation (139)
    on left: 165, on right: 162 164
designator_list (140)
    on left: 166 167, on right: 165 167
designator (141)
    on left: 168 169, on right: 166 167
translation_unit (142)
    on left: 170 171, on right: 0 171
external_declaration (143)
    on left: 172 173, on right: 170 171
function_definition (144)
    on left: 174 175, on right: 172
declaration_list (145)
    on left: 176 177, on right: 175 177
statement (146)
    on left: 178 179 180 181 182 183, on right: 184 185 186 192 195
    196 197 198 199 200 201
labeled_statement (147)
    on left: 184 185 186, on right: 178
compound_statement (148)
    on left: 187 188, on right: 174 175 179
block_item_list (149)
    on left: 189 190, on right: 188 190
block_item (150)
    on left: 191 192, on right: 189 190
expression_statement (151)
    on left: 193 194, on right: 180 200 201
selection_statement (152)
    on left: 195 196 197, on right: 181
iteration_statement (153)
    on left: 198 199 200 201, on right: 182
jump_statement (154)
    on left: 202 203 204 205 206, on right: 183


State 0

    0 $accept: . translation_unit $end

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    DOUBLE_KEYWORD     shift, and go to state 4
    FLOAT_KEYWORD      shift, and go to state 5
    LONG_KEYWORD       shift, and go to state 6
    INT_KEYWORD        shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    CHAR_KEYWORD       shift, and go to state 9
    VOID_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    VOLATILE_KEYWORD   shift, and go to state 12
    CONST_KEYWORD      shift, and go to state 13
    BOOL_KEYWORD       shift, and go to state 14
    UNSIGNED_KEYWORD   shift, and go to state 15
    EXTERN_KEYWORD     shift, and go to state 16
    STATIC_KEYWORD     shift, and go to state 17
    COMPLEX_KEYWORD    shift, and go to state 18
    INLINE_KEYWORD     shift, and go to state 19
    IMAGINARY_KEYWORD  shift, and go to state 20
    TYPEDEF_KEYWORD    shift, and go to state 21
    REGISTER_KEYWORD   shift, and go to state 22

    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29
    translation_unit         go to state 30
    external_declaration     go to state 31
    function_definition      go to state 32


State 1

   86 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 86 (storage_class_specifier)


State 2

  116 enum_specifier: ENUM_KEYWORD . '{' enumerator_list '}'
  117               | ENUM_KEYWORD . IDENTIFIER '{' enumerator_list '}'
  118               | ENUM_KEYWORD . IDENTIFIER

    IDENTIFIER  shift, and go to state 33
    '{'         shift, and go to state 34


State 3

  124 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 124 (type_qualifier)


State 4

  100 type_specifier: DOUBLE_KEYWORD .

    $default  reduce using rule 100 (type_specifier)


State 5

   99 type_specifier: FLOAT_KEYWORD .

    $default  reduce using rule 99 (type_specifier)


State 6

   98 type_specifier: LONG_KEYWORD .

    $default  reduce using rule 98 (type_specifier)


State 7

   97 type_specifier: INT_KEYWORD .

    $default  reduce using rule 97 (type_specifier)


State 8

   96 type_specifier: SHORT_KEYWORD .

    $default  reduce using rule 96 (type_specifier)


State 9

   95 type_specifier: CHAR_KEYWORD .

    $default  reduce using rule 95 (type_specifier)


State 10

   94 type_specifier: VOID_KEYWORD .

    $default  reduce using rule 94 (type_specifier)


State 11

   88 type_specifier: SIGNED_KEYWORD .

    $default  reduce using rule 88 (type_specifier)


State 12

  125 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 125 (type_qualifier)


State 13

  123 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 123 (type_qualifier)


State 14

   90 type_specifier: BOOL_KEYWORD .

    $default  reduce using rule 90 (type_specifier)


State 15

   89 type_specifier: UNSIGNED_KEYWORD .

    $default  reduce using rule 89 (type_specifier)


State 16

   84 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 84 (storage_class_specifier)


State 17

   85 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 85 (storage_class_specifier)


State 18

   91 type_specifier: COMPLEX_KEYWORD .

    $default  reduce using rule 91 (type_specifier)


State 19

  126 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 126 (function_specifier)


State 20

   92 type_specifier: IMAGINARY_KEYWORD .

    $default  reduce using rule 92 (type_specifier)


State 21

   83 storage_class_specifier: TYPEDEF_KEYWORD .

    $default  reduce using rule 83 (storage_class_specifier)


State 22

   87 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 87 (storage_class_specifier)


State 23

  173 external_declaration: declaration .

    $default  reduce using rule 173 (external_declaration)


State 24

   69 declaration: declaration_specifiers . ';'
   70            | declaration_specifiers . init_declarator_list ';'
  174 function_definition: declaration_specifiers . declarator compound_statement
  175                    | declaration_specifiers . declarator declaration_list compound_statement

    IDENTIFIER  shift, and go to state 35
    '('         shift, and go to state 36
    '*'         shift, and go to state 37
    ';'         shift, and go to state 38

    init_declarator_list  go to state 39
    init_declarator       go to state 40
    declarator            go to state 41
    direct_declarator     go to state 42
    pointer               go to state 43


State 25

   71 declaration_specifiers: storage_class_specifier .
   72                       | storage_class_specifier . declaration_specifiers
